# EmotionTracker

./: .gitignore  LICENSE  README.md  pyproject.toml
emoface/: package-lock.json  package.json
emoface/public/: index.html
emoface/src/: App.css  App.js  Selfie.jsx  dashboard.jsx  search.jsx  welcome.jsx
emoface/src/components/: dashboard.jsx  data.jsx  search.jsx  welcome.jsx
emotion-tracker-js/: README.md  config.js  index.js  package-lock.json  package.json
emotion-tracker-js/examples/example-react-project/: package.json
emotion-tracker-js/src/: EmotionTracker.js
er-engine/: er_engine.py  main.py  pyproject.toml
er-engine/er_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
movie-recommendation-api/: README.md  config.py  db_populate.py  load_db.py  main.py  pyproject.toml  requirements.txt
movie-recommendation-api/config/: config.py  web_config.py
movie-recommendation-api/data/: emotions_map_improve.json  emotions_map_keep_up.json
movie-recommendation-api/db/: db_context.py  db_utils.py
movie-recommendation-api/dto/: error_response.py  movie_response.py
movie-recommendation-api/exceptions/: bad_parameters_exception.py  db_exception.py
movie-recommendation-api/model/: movie.py
movie-recommendation-api/repository/: base_repository.py  genre_repository.py  movie_genre_repository.py  movie_repository.py
movie-recommendation-api/services/: movie_recommendation_service.py  movie_recommender_service.py  recommendation_service.py  recommender_service.py
movie-recommendation-api/utils/: io.py  poster_scraper.py
(+2 files in other folders)
