[tool.poetry]
name = "er-engine"
version = "0.1.0"
description = "EmotionTracker's Emotion Recognition Engine"
authors = ["VikVelev <viktorvelev8@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
deepface = "^0.0.40"
bentoml = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
